--- a/ng-zorro-cesium/src/index.html
+++ b/ng-zorro-cesium/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgZorroDemo</title>
+  <title>NgZorroCesium</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
